[gd_scene load_steps=101 format=3 uid="uid://cbsmowvc0mgn8"]

[ext_resource type="Script" uid="uid://dqk64ej6bmlbp" path="res://scripts/player.gd" id="1_s25n1"]
[ext_resource type="Resource" uid="uid://tldhcyry776g" path="res://inventory/playerinv.tres" id="2_gmlin"]
[ext_resource type="Texture2D" uid="uid://dbgblvx7x843x" path="res://game/Characters/Bunny_Run.png" id="3_p47bc"]
[ext_resource type="Texture2D" uid="uid://tdssx1yvrxn5" path="res://game/Characters/Bunny_Idle.png" id="4_75vfm"]
[ext_resource type="PackedScene" uid="uid://jydxm4wfpaqu" path="res://inventory/inv_ui.tscn" id="4_lvxji"]
[ext_resource type="Texture2D" uid="uid://cw1w0n5v5f7nm" path="res://game/Characters/Bunny_Sword.png" id="5_75vfm"]
[ext_resource type="AudioStream" uid="uid://h43s7k2bvp8s" path="res://assets/audio/SFX/walking-on-grass-363353.mp3" id="7_0owmy"]
[ext_resource type="PackedScene" uid="uid://bs0ysu6s7ek7d" path="res://scenes/player/health.tscn" id="8_qek5x"]
[ext_resource type="AudioStream" uid="uid://dw1utwtydhcy3" path="res://assets/audio/SFX/sword-slice-393847.mp3" id="9_5gtgg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("3_p47bc")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("3_p47bc")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("3_p47bc")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("3_p47bc")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("3_p47bc")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("3_p47bc")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("3_p47bc")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("3_p47bc")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("4_75vfm")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("4_75vfm")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("4_75vfm")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("4_75vfm")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("4_75vfm")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y4ya"]
atlas = ExtResource("4_75vfm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s050l"]
atlas = ExtResource("4_75vfm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sw5w"]
atlas = ExtResource("4_75vfm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4k4a"]
atlas = ExtResource("4_75vfm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkc6f"]
atlas = ExtResource("4_75vfm")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_21yht"]
atlas = ExtResource("4_75vfm")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trum3"]
atlas = ExtResource("4_75vfm")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b1ex"]
atlas = ExtResource("4_75vfm")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8cnd"]
atlas = ExtResource("4_75vfm")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuxn4"]
atlas = ExtResource("4_75vfm")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_46q5t"]
atlas = ExtResource("4_75vfm")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5miun"]
atlas = ExtResource("4_75vfm")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u1tp"]
atlas = ExtResource("4_75vfm")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq1ih"]
atlas = ExtResource("4_75vfm")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ki0"]
atlas = ExtResource("4_75vfm")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("3_p47bc")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("3_p47bc")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("3_p47bc")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("3_p47bc")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("3_p47bc")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("3_p47bc")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("3_p47bc")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("3_p47bc")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("3_p47bc")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("3_p47bc")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("3_p47bc")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("3_p47bc")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("3_p47bc")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("3_p47bc")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("3_p47bc")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("3_p47bc")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("5_75vfm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("5_75vfm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttakn"]
atlas = ExtResource("5_75vfm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8a5"]
atlas = ExtResource("5_75vfm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuka"]
atlas = ExtResource("5_75vfm")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyqqp"]
atlas = ExtResource("5_75vfm")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1xl"]
atlas = ExtResource("5_75vfm")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1sw"]
atlas = ExtResource("5_75vfm")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t3bg"]
atlas = ExtResource("5_75vfm")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrbya"]
atlas = ExtResource("5_75vfm")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahqnk"]
atlas = ExtResource("5_75vfm")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb1ce"]
atlas = ExtResource("5_75vfm")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncpa"]
atlas = ExtResource("5_75vfm")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_upxxc"]
atlas = ExtResource("5_75vfm")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln3h3"]
atlas = ExtResource("5_75vfm")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygh0"]
atlas = ExtResource("5_75vfm")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1aof"]
atlas = ExtResource("5_75vfm")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qe1"]
atlas = ExtResource("5_75vfm")
region = Rect2(384, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdvrm"]
atlas = ExtResource("5_75vfm")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xbmr"]
atlas = ExtResource("5_75vfm")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hir57"]
atlas = ExtResource("5_75vfm")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7072n"]
atlas = ExtResource("5_75vfm")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmu8b"]
atlas = ExtResource("5_75vfm")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38bk"]
atlas = ExtResource("5_75vfm")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3chqh"]
atlas = ExtResource("5_75vfm")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwfqx"]
atlas = ExtResource("5_75vfm")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kssj8"]
atlas = ExtResource("5_75vfm")
region = Rect2(384, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lfxt"]
atlas = ExtResource("5_75vfm")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lclul"]
atlas = ExtResource("5_75vfm")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2d6"]
atlas = ExtResource("5_75vfm")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvjb1"]
atlas = ExtResource("5_75vfm")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bysbl"]
atlas = ExtResource("5_75vfm")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wy34"]
atlas = ExtResource("5_75vfm")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymths"]
atlas = ExtResource("5_75vfm")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p0jd"]
atlas = ExtResource("5_75vfm")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nf13"]
atlas = ExtResource("5_75vfm")
region = Rect2(384, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxw46"]
atlas = ExtResource("3_p47bc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qxvo"]
atlas = ExtResource("3_p47bc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q8fn"]
atlas = ExtResource("3_p47bc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wva7c"]
atlas = ExtResource("3_p47bc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7obkq"]
atlas = ExtResource("3_p47bc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo27k"]
atlas = ExtResource("3_p47bc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_genst"]
atlas = ExtResource("3_p47bc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_niom3"]
atlas = ExtResource("3_p47bc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxf5x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}],
"loop": true,
"name": &"downwalk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y4ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s050l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sw5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4k4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkc6f")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21yht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trum3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b1ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8cnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuxn4")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46q5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5miun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u1tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq1ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ki0")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}],
"loop": true,
"name": &"leftwalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}],
"loop": true,
"name": &"rightwalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttakn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyqqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t3bg")
}],
"loop": true,
"name": &"swordback",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrbya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahqnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb1ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upxxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln3h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1aof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qe1")
}],
"loop": true,
"name": &"swordfront",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdvrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xbmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hir57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7072n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmu8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3chqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwfqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kssj8")
}],
"loop": true,
"name": &"swordleft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lfxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lclul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvjb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bysbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wy34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymths")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p0jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nf13")
}],
"loop": true,
"name": &"swordright",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q8fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wva7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7obkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo27k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_genst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niom3")
}],
"loop": true,
"name": &"upwalk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_0owmy"]
radius = 12.0

[node name="player" type="CharacterBody2D"]
z_index = 2
position = Vector2(0, -8)
collision_layer = 3
script = ExtResource("1_s25n1")
inv = ExtResource("2_gmlin")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gxf5x")
animation = &"idle_left"
autoplay = "idle"
frame_progress = 0.9173754

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_dovo2")

[node name="Inv_UI" parent="." instance=ExtResource("4_lvxji")]
visible = false
offset_left = -41.0
offset_top = -79.0
offset_right = 78.0
offset_bottom = 17.0

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 320
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="island_camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 320
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="FootstepSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0owmy")
volume_db = 2.0
pitch_scale = 2.03

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_0owmy")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 2.5

[node name="deal_attack_timer" type="Timer" parent="."]

[node name="regen_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="uihealth" parent="CanvasLayer" instance=ExtResource("8_qek5x")]
offset_left = -266.0
offset_top = -152.0
offset_right = -786.0
offset_bottom = -428.0

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5gtgg")
volume_db = 1.5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
